--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,4 +15,10 @@
         <item name="android:windowContentOverlay">@null</item>
     </style>
 
+    <style name="Dialog.NearlyFullScreen" parent="@style/Theme.AppCompat.Light.Dialog">
+        <item name="android:windowMinWidthMajor">90%</item>
+        <item name="android:windowMinWidthMinor">90%</item>
+    </style>
+
+
 </resources>
