--- a/app/src/main/res/layout/fragment_city_screen.xml
+++ b/app/src/main/res/layout/fragment_city_screen.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
@@ -20,13 +21,6 @@
             android:layout_height="match_parent"
             android:background="@drawable/citymap_faith"
             android:contentDescription="@string/frag_main_descr_city_plan" />
-        <!--AVATAR -->
-        <ImageView
-            android:id="@+id/image_main_avatar"
-            android:layout_width="100dp"
-            android:layout_height="150dp"
-            android:contentDescription="@string/frag_main_descr_your_avatar"
-            android:src="@drawable/meisje_stoer" />
 
         <!-- KNOPPEN -->
         <!-- Invisible to make it transparent -->
@@ -34,13 +28,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="#00000000">
-
-            <View
-                android:id="@+id/main_start_location"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
 
             <!--Every button is set by using two intersecting guidelines.
                 The top left corner of the button is located at the intersection.
@@ -77,7 +64,7 @@
                 android:layout_width="8dp"
                 android:layout_height="12dp"
                 android:orientation="horizontal"
-                app:layout_constraintGuide_percent="0.2" />
+                app:layout_constraintGuide_percent="0.24" />
 
             <View
                 android:id="@+id/city_first_location"
@@ -101,7 +88,7 @@
                 android:layout_width="8dp"
                 android:layout_height="12dp"
                 android:orientation="horizontal"
-                app:layout_constraintGuide_percent="0.31" />
+                app:layout_constraintGuide_percent="0.38" />
 
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/guide_loc2_right"
@@ -115,7 +102,18 @@
                 android:layout_width="8dp"
                 android:layout_height="12dp"
                 android:orientation="horizontal"
-                app:layout_constraintGuide_percent="0.46" />
+                app:layout_constraintGuide_percent="0.54" />
+            <!--AVATAR -->
+            <ImageView
+                android:id="@+id/image_main_avatar"
+                android:layout_width="100dp"
+                android:layout_height="150dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginBottom="8dp"
+                android:contentDescription="@string/frag_main_descr_your_avatar"
+                android:src="@drawable/meisje_stoer"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
 
             <View
                 android:id="@+id/city_second_location"
