--- a/app/src/main/res/layout/fragment_enter_event_details.xml
+++ b/app/src/main/res/layout/fragment_enter_event_details.xml
@@ -8,6 +8,9 @@
         <variable
             name="eventViewModel"
             type="be.hogent.faith.faith.emotionCapture.enterEventDetails.EventViewModel" />
+        <variable
+            name="userViewModel"
+            type="be.hogent.faith.faith.UserViewModel"/>
     </data>
 
     <FrameLayout
@@ -187,11 +190,11 @@
                 app:layout_constraintTop_toBottomOf="@id/guide_horizontal_details" />
 
             <ImageButton
-                android:id="@+id/btn_event_details_send"
+                android:id="@+id/btn_event_save"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:minWidth="24dp"
-                android:onClick="@{() -> eventViewModel.onSendButtonClicked()}"
+                android:onClick="@{() -> userViewModel.saveEvent(eventViewModel.eventTitle, eventViewModel.event)}"
                 android:src="@drawable/event_details_send"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/guide_horizontal_details"
