--- a/app/src/main/res/layout/fragment_edit_detail.xml
+++ b/app/src/main/res/layout/fragment_edit_detail.xml
@@ -8,7 +8,7 @@
             type="be.hogent.faith.faith.emotionCapture.editDetail.EditDetailViewModel" />
     </data>
 
-    <androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <androidx.constraintlayout.motion.widget.MotionLayout
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/motionLayout"
         android:layout_width="match_parent"
