refactor: move save audio to UserVM

--- a/app/src/main/res/layout/fragment_record_audio.xml
+++ b/app/src/main/res/layout/fragment_record_audio.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
     <data>
 
@@ -16,8 +15,8 @@
     <LinearLayout
         android:id="@+id/screen_record_audio"
         android:layout_width="match_parent"
-        android:gravity="center"
         android:layout_height="match_parent"
+        android:gravity="center"
         android:orientation="horizontal">
 
         <ImageButton
@@ -26,9 +25,9 @@
             android:layout_height="wrap_content"
             android:layout_margin="32dp"
             android:contentDescription="@string/description_pause_recording"
-            android:onClick="@{() -> recordAudioViewModel.onPauseButtonClicked()}"
+            android:onClick="@{() -> recordAudioViewModel.onUserViewModel"
             android:src="@drawable/audio_pause"
-            android:visibility="@{recordAudioViewModel.recordingStatus != RecordingStatus.PAUSED? View.VISIBLE : View.INVISIBLE}"/>
+            android:visibility="@{recordAudioViewModel.recordingStatus != RecordingStatus.PAUSED? View.VISIBLE : View.INVISIBLE}" />
 
         <ImageButton
             android:id="@+id/btn_recordAudio_record"
@@ -38,7 +37,7 @@
             android:contentDescription="@string/description_start_recording"
             android:onClick="@{() -> recordAudioViewModel.onRecordButtonClicked()}"
             android:src="@drawable/audio_record"
-            android:visibility="@{recordAudioViewModel.recordingStatus != RecordingStatus.RECORDING? View.VISIBLE : View.INVISIBLE}"/>
+            android:visibility="@{recordAudioViewModel.recordingStatus != RecordingStatus.RECORDING? View.VISIBLE : View.INVISIBLE}" />
 
         <ImageButton
             android:id="@+id/btn_recordAudio_restart"
@@ -47,7 +46,7 @@
             android:layout_margin="32dp"
             android:contentDescription="@string/description_restart_recording"
             android:onClick="@{() -> recordAudioViewModel.onRestartButtonClicked()}"
-            android:src="@drawable/audio_restart"/>
+            android:src="@drawable/audio_restart" />
 
         <ImageButton
             android:id="@+id/btn_recordAudio_stop"
@@ -56,7 +55,7 @@
             android:layout_margin="32dp"
             android:contentDescription="@string/description_stop_recording"
             android:onClick="@{() -> recordAudioViewModel.onStopButtonClicked()}"
-            android:src="@drawable/audio_stop"/>
+            android:src="@drawable/audio_stop" />
 
 
     </LinearLayout>
