--- a/app/src/main/res/layout/fragment_draw.xml
+++ b/app/src/main/res/layout/fragment_draw.xml
@@ -21,15 +21,30 @@
             layout="@layout/panel_drawing_tools"
             bind:drawViewModel="@{drawViewModel}" />
 
-        <com.divyanshu.draw.widget.DrawView
-            android:id="@+id/drawView"
+        <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+            <com.divyanshu.draw.widget.DrawView
+                android:id="@+id/drawView"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:onClick="@{() -> drawViewModel.onSaveButtonClicked()}"
+                android:text="@string/save" />
+        </LinearLayout>
 
         <include
             android:id="@+id/container_draw_images"
             layout="@layout/panel_drawing_images" />
+
 
     </LinearLayout>
 </layout>
