--- a/app/src/main/res/layout/fragment_edit_detail.xml
+++ b/app/src/main/res/layout/fragment_edit_detail.xml
@@ -24,6 +24,16 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <ImageButton
+            android:id="@+id/btn_event_send"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:minWidth="24dp"
+            android:src="@drawable/event_details_send"
+            android:onClick="@{() -> editdetailViewModel.onSendButtonClicked()}"
+            app:layout_constraintEnd_toStartOf="@+id/image_editDetail_avatar"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <ImageView
             android:id="@+id/image_editDetail_avatar"
             android:layout_width="0dp"
