--- a/app/src/main/res/layout/fragment_enter_event_details.xml
+++ b/app/src/main/res/layout/fragment_enter_event_details.xml
@@ -186,7 +186,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/guide_horizontal_details" />
 
-            <ImageButton
+            <!--ImageButton
                 android:id="@+id/btn_event_send"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -196,6 +196,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/guide_horizontal_details"
                 app:layout_constraintTop_toTopOf="parent" />
+                -->
 
             <Button
                 android:id="@+id/btn_event_details_gotoEmotionAvatar"
