--- a/app/src/main/res/layout/fragment_register_avatar.xml
+++ b/app/src/main/res/layout/fragment_register_avatar.xml
@@ -39,7 +39,7 @@
                 android:layout_marginEnd="8dp"
                 android:orientation="horizontal"
                 app:layout_constraintBottom_toTopOf="@+id/guide_avatarRecyclerView_bottom"
-                app:layout_constraintEnd_toStartOf="@+id/view"
+                app:layout_constraintEnd_toStartOf="@+id/btn_register_finishRegistration"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="@id/guide_avatarRecyclerView_top"
                 tools:listitem="@layout/avatar_rv_item" />
@@ -84,11 +84,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                app:layout_constraintGuide_percent="0.83" />
+                app:layout_constraintGuide_percent="0.87" />
 
             <View
-                android:id="@+id/view"
+                android:id="@+id/btn_register_finishRegistration"
                 android:layout_width="0dp"
+                android:onClick="@{() -> registerUserViewModel.onFinishRegistrationClicked()}"
                 android:layout_height="0dp"
                 app:layout_constraintBottom_toTopOf="@+id/guide_city_bottom"
                 app:layout_constraintEnd_toStartOf="@+id/guide_city_end"
